--- a/articles/cognitive-services/TOC.yml
+++ b/articles/cognitive-services/TOC.yml
@@ -36,6 +36,8 @@
       href: ./encryption/cognitive-services-encryption-keys-portal.md
     - name: 对认知服务的请求进行身份验证
       href: authentication.md
+    - name: 安全基线
+      href: security-baseline.md
 - name: 容器支持
   items:
     - name: 容器支持
