--- a/articles/cognitive-services/immersive-reader/toc.yml
+++ b/articles/cognitive-services/immersive-reader/toc.yml
@@ -29,9 +29,15 @@
       href: how-to-customize-launch-button.md
     - name: 缓存身份验证令牌
       href: how-to-cache-token.md
+    - name: 配置大声朗读
+      href: how-to-configure-read-aloud.md
+    - name: 配置翻译
+      href: how-to-configure-translation.md
+    - name: 存储用户首选项
+      href: how-to-store-user-preferences.md
 - name: 参考
   items:
-    - name: SDK 参考
+    - name: JavaScript SDK
       href: reference.md
 - name: 资源
   items:
