commit translated contents

--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -241,6 +241,8 @@
           href: brightspace-desire2learn-tutorial.md
         - name: Britive
           href: britive-tutorial.md
+        - name: BrowserStack 单一登录
+          href: browserstack-single-sign-on-tutorial.md
         - name: Bugsnag
           href: bugsnag-tutorial.md
         - name: BullseyeTDP
@@ -459,7 +461,7 @@
           href: darwinbox-tutorial.md
         - name: Drift
           href: drift-tutorial.md
-        - name: Dropbox for Business
+        - name: Dropbox Business
           href: dropboxforbusiness-tutorial.md
         - name: Druva
           href: druva-tutorial.md
@@ -693,8 +695,6 @@
           href: helpshift-tutorial.md
         - name: Health Support System
           href: health-support-system-tutorial.md
-        - name: Helix Core- Helix Authentication Service
-          href: perforce-helix-core-tutorial.md
         - name: Heroku
           href: heroku-tutorial.md
         - name: HeyBuddy
@@ -1201,6 +1201,8 @@
           href: perceptyx-tutorial.md
         - name: Percolate
           href: percolate-tutorial.md
+        - name: Perforce Helix Core - Helix Authentication Service
+          href: perforce-helix-core-tutorial.md
         - name: PerformanceCentre
           href: performancecentre-tutorial.md
         - name: Periscope Data
@@ -1575,7 +1577,7 @@
           href: teamviewer-tutorial.md
         - name: Teamwork.com
           href: teamwork-tutorial.md
-        - name: Templafy
+        - name: Templafy SAML2
           href: templafy-tutorial.md
         - name: Terraform Enterprise
           href: terraform-enterprise-tutorial.md
@@ -1852,7 +1854,7 @@
           href: cornerstone-ondemand-provisioning-tutorial.md
         - name: DocuSign
           href: docusign-provisioning-tutorial.md
-        - name: Dropbox for Business
+        - name: Dropbox Business
           href: dropboxforbusiness-provisioning-tutorial.md
         - name: Dynamic Signal
           href: dynamic-signal-provisioning-tutorial.md
