--- a/articles/key-vault/secrets/toc.yml
+++ b/articles/key-vault/secrets/toc.yml
@@ -23,14 +23,15 @@
       href: quick-create-python.md
     - name: Java
       href: quick-create-java.md
-    - name: Azure 资源管理器模板
+    - name: ARM 模板
+      displayName: Resource Manager
       href: quick-create-template.md
 - name: 教程
   items:
     - name: 轮换
       items:
-        - name: 设置端到端密钥轮换和审核
-          href: key-rotation-log-monitoring.md
+        - name: 双凭据轮换教程
+          href: tutorial-rotation-dual.md
         - name: 单用户/密码轮换教程
           href: tutorial-rotation.md
     - name: 应用程序集成
