--- a/articles/key-vault/secrets/index.yml
+++ b/articles/key-vault/secrets/index.yml
@@ -11,12 +11,12 @@ metadata:
   author: msmbaldwin
   ms.author: mbaldwin
   ms.date: 04/07/2020
-  ms.openlocfilehash: 9c85db09e3c744b09380b34daefdb253b910d889
-  ms.sourcegitcommit: b80aafd2c71d7366838811e92bd234ddbab507b6
+  ms.openlocfilehash: 96ea2c2091702840e5c66f2071b6180185f2f7cf
+  ms.sourcegitcommit: 1d9f7368fa3dadedcc133e175e5a4ede003a8413
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 04/16/2020
-  ms.locfileid: "81423422"
+  ms.lasthandoff: 06/27/2020
+  ms.locfileid: "85482813"
 landingContent:
 - title: 机密
   linkLists:
@@ -46,8 +46,10 @@ landingContent:
   linkLists:
   - linkListType: tutorial
     links:
-    - text: 为单用户资源轮换机密
+    - text: 为单凭据资源轮换机密
       url: tutorial-rotation.md
+    - text: 为双凭据资源轮换机密
+      url: tutorial-rotation-dual.md
     - text: 使用 Linux VM 和 .NET 应用存储机密
       url: tutorial-net-linux-virtual-machine.md
     - text: 使用 Linux VM 和 Python 应用存储机密
@@ -58,7 +60,7 @@ landingContent:
     links:
     - text: 使用 CLI 管理存储帐户密钥
       url: overview-storage-keys.md
-    - text: 使用 PowerShell 管理存储帐户密钥
+    - text: 通过 PowerShell 管理存储帐户密钥
       url: overview-storage-keys-powershell.md
     - text: 通过编写代码提取共享访问签名令牌
       url: storage-keys-sas-tokens-code.md
