commit translated contents

--- a/articles/index.yml
+++ b/articles/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.date: 02/27/2020
   featureFlags:
   - clicktale
-  ms.openlocfilehash: 5f9dbc120b301100364da61f7d8c19fa58beb5c9
-  ms.sourcegitcommit: 1d9f7368fa3dadedcc133e175e5a4ede003a8413
+  ms.openlocfilehash: 6edc39bc9923d53732775c68c9b7fe4f2d35b055
+  ms.sourcegitcommit: fdaad48994bdb9e35cdd445c31b4bac0dd006294
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/27/2020
-  ms.locfileid: "85482915"
+  ms.lasthandoff: 06/26/2020
+  ms.locfileid: "85414379"
 highlightedContent:
   items:
   - title: Azure 开发人员入门指南
@@ -1042,12 +1042,12 @@ productDirectory:
     - media
     url: media-services/latest/index.yml
   - title: Data Box
-    summary: 用于将数据传输到 Azure 的设备和解决方案
+    summary: 用于将数据传输到 Azure 并进行 Edge 计算的设备和解决方案
     imageSrc: https://static.docs.com/ui/media/product/azure/data-box.svg
     azureCategories:
     - migration
     - storage
-    url: databox/index.yml
+    url: databox-family/index.md
   - title: 空间定位点（预览版）
     summary: 创建多用户的、具有空间感的混合现实体验
     imageSrc: https://static.docs.com/ui/media/product/azure/spatial-anchor-accounts.svg
