--- a/articles/active-directory/b2b/toc.yml
+++ b/articles/active-directory/b2b/toc.yml
@@ -133,8 +133,8 @@
       items:
         - name: 常见问题解答
           href: faq.md
-        - name: 获取 B2B 支持
-          href: get-support.md
+        - name: 获取支持
+          href: 'https://docs.microsoft.com/azure/active-directory/fundamentals/active-directory-troubleshooting-support-howto'
         - name: Azure 反馈论坛
           href: 'https://feedback.azure.com/forums/169401-azure-active-directory'
         - name: Azure 路线图
