--- a/articles/active-directory/saas-apps/toc.yml
+++ b/articles/active-directory/saas-apps/toc.yml
@@ -1829,7 +1829,7 @@
         - name: Atlassian Cloud
           href: atlassian-cloud-provisioning-tutorial.md
         - name: Azure Databricks SCIM 连接器
-          href: azure-databricks-scim-connector-provisioning-tutorial.md
+          href: 'https://docs.microsoft.com/azure/databricks/administration-guide/users-groups/scim/aad?toc=/azure/active-directory/saas-apps/toc.json&bc=/azure/active-directory/saas-apps/breadcrumb/toc.json'
         - name: BitaBIZ
           href: bitabiz-provisioning-tutorial.md
         - name: Blink
