--- a/articles/iot-central/core/TOC.yml
+++ b/articles/iot-central/core/TOC.yml
@@ -151,6 +151,10 @@
               href: howto-manage-preferences.md
             - name: 切换实时聊天
               href: howto-show-hide-chat.md
+- name: 参考
+  items:
+    - name: Azure CLI
+      href: /cli/azure/azure-cli-reference-for-IoT
 - name: 资源
   items:
     - name: 支持和帮助选项
