commit translated contents

--- a/articles/cognitive-services/Speech-Service/index.yml
+++ b/articles/cognitive-services/Speech-Service/index.yml
@@ -13,12 +13,12 @@ metadata:
   ms.topic: hub-page
   ms.date: 03/24/2020
   ms.author: trbye
-  ms.openlocfilehash: ab947791b6aec9b0b729161b4325fe0b9ca68361
-  ms.sourcegitcommit: c4ad4ba9c9aaed81dfab9ca2cc744930abd91298
+  ms.openlocfilehash: 455f71c7fd9defd7a1187f6b5df6b5b3b9c3131b
+  ms.sourcegitcommit: 73ac360f37053a3321e8be23236b32d4f8fb30cf
   ms.translationtype: HT
   ms.contentlocale: zh-CN
-  ms.lasthandoff: 06/12/2020
-  ms.locfileid: "84736860"
+  ms.lasthandoff: 06/30/2020
+  ms.locfileid: "85563767"
 highlightedContent:
   items:
   - title: 什么是语音服务？
@@ -124,6 +124,9 @@ conceptualContent:
     - itemType: how-to-guide
       text: 关于说话人识别
       url: speaker-recognition-overview.md
+    - itemType: how-to-guide
+      text: 说话人识别基础知识
+      url: speaker-recognition-basics.md
     - itemType: how-to-guide
       text: 说话人识别 API 参考
       url: https://docs.microsoft.com/rest/api/speakerrecognition/
