--- a/articles/azure-portal/TOC.yml
+++ b/articles/azure-portal/TOC.yml
@@ -13,6 +13,7 @@
     - name: 在门户中创建 VM
       href: ../virtual-machines/windows/quick-create-portal.md?toc=/azure/azure-portal/toc.json&bc=/azure/azure-portal/breadcrumb/toc.json
     - name: 创建仪表板 - ARM 模板
+      displayName: Resource Manager
       href: quick-create-template.md
 - name: 概念
   items:
