--- a/articles/cdn/TOC.yml
+++ b/articles/cdn/TOC.yml
@@ -13,6 +13,7 @@
     - name: 创建配置文件和终结点
       href: cdn-create-new-endpoint.md
     - name: 创建配置文件和终结点 - ARM 模板
+      displayName: Resource Manager
       href: create-profile-endpoint-template.md
 - name: 教程
   items:
