--- a/articles/mysql/TOC.yml
+++ b/articles/mysql/TOC.yml
@@ -294,6 +294,10 @@
           href: howto-restart-server-cli.md
         - name: Azure PowerShell
           href: howto-restart-server-powershell.md
+    - name: 在区域之间移动
+      items:
+        - name: Azure 门户
+          href: howto-move-regions-portal.md
 - name: 参考
   items:
     - name: Azure CLI
